fix: bg color in dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@ body {
 /* Dark mode support */
 html.dark {
   color-scheme: dark;
+  background-color: var(--color-gray-900);
 }
 
 html:not(.dark), html.light {
